<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:orientation="vertical"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
	android:background="@drawable/background"
	android:gravity="center_horizontal"
   	>
   	
   	<ScrollView 
	   	android:orientation="vertical"
	   	android:layout_width="fill_parent"
	   	android:layout_height="fill_parent"
	   	android:layout_weight="1.0"
	   	>
   	
	   	<LinearLayout android:layout_width="fill_parent" 
	       	android:layout_height="wrap_content"
	       	android:baselineAligned="false"
	       	android:orientation="vertical"
	       	android:paddingLeft="5dip"
	       	android:paddingRight="5dip"
	       	>
	       	<LinearLayout android:layout_width="fill_parent" 
	       		android:layout_height="wrap_content"
	       		android:orientation="horizontal"
	       		android:paddingTop="10dip"
	       		android:paddingBottom="5dip"
	       		>  
	   	
	   			<TextView android:id="@+id/blName"
	        		  android:layout_width="wrap_content"
	            	  android:layout_height="wrap_content"
	                  android:textSize="14sp"
	                  android:textStyle="bold"
	                  android:layout_gravity="center_vertical" 
	                  android:text="@string/add_from_string"
	                  />
	   	
		    	<TextView android:id="@+id/how_many_number_selected_view"
		        		  android:layout_width="wrap_content"
		            	  android:layout_height="wrap_content"
		                  android:textSize="14sp"
		                  android:textStyle="bold"
		                  android:textColor="@color/nortoncolor"
		                  android:paddingLeft="2dip"
		                  />                 
		    </LinearLayout>

	   		<LinearLayout android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:padding="10dip"
		        android:gravity="top"  
        		> 
	   	
		   		<Button  android:id="@+id/add_bl_number_from_contact_btn" 
		       		 	 android:layout_width="fill_parent"
		       		 	 android:layout_height="wrap_content"
		       		 	 android:clickable="true"
		       		 	 android:text="@string/add_bl_number_from_contact_string"
		       		 	 android:layout_weight="1.0"
		       		 	 android:gravity="center"
		       		 	 android:textSize="15sp"
		       		 	 />
		       		 	 
		       	<Button  android:id="@+id/add_bl_number_from_call_record_btn" 
		       		 	 android:layout_width="fill_parent"
		       		 	 android:layout_height="wrap_content"
		       		 	 android:clickable="true"
		       		 	 android:text="@string/add_bl_number_from_call_record_string"
		       		 	 android:layout_weight="1.0"
						 android:gravity="center"
						 android:textSize="15sp"
		       		 	 />
		       		 	 
		       	<Button  android:id="@+id/add_bl_number_from_sms_record_btn" 
		       		 	 android:layout_width="fill_parent"
		       		 	 android:layout_height="wrap_content"
		       		 	 android:clickable="true"
		       		 	 android:text="@string/add_bl_number_from_sms_record_string"
		       		 	 android:layout_weight="1.0"
		       		 	 android:gravity="center"
		       		 	 android:textSize="15sp"
		       		 	 />
		       		 	 
		       	<Button  android:id="@+id/add_bl_number_from_input_btn" 
		       		 	 android:layout_width="fill_parent"
		       		 	 android:layout_height="wrap_content"
		       		 	 android:clickable="true"
		       		 	 android:text="@string/add_bl_number_from_input_string"
		       		 	 android:layout_weight="1.0"
		       		 	 android:gravity="center"
		       		 	 android:textSize="15sp"
		       		 	 />
		    </LinearLayout>
	   	
	   		
	                  
	        <!--  -->LinearLayout android:layout_width="fill_parent" 
	       		android:layout_height="wrap_content"
	       		android:orientation="vertical"
	       		android:paddingTop="5dip"
	       		>   
	       		
	       		<!--  -->TextView android:id="@+id/add_bl_number_reply_option_view"
	        		  android:layout_width="wrap_content"
	            	  android:layout_height="wrap_content"
	                  android:textSize="14sp"
	                  android:textStyle="bold"
	                  android:layout_gravity="center_vertical" 
                      android:text="@string/add_bl_number_reply_option_string"
                      />
                      
                <!--  -->RadioGroup android:id="@+id/add_bl_number_reply_option_radioGroup"
                            android:layout_width="wrap_content"
	            	  		android:layout_height="wrap_content"
	            	  		android:checkedButton="@+id/radio_group_ignore"
	            	  		android:layout_marginLeft="20dip"
	            	  		>
	            	  <!--  -->RadioButton
				            android:text="@string/radio_group_ignore_string"
				            android:id="@+id/radio_group_ignore"
				            android:textSize="15sp"
				            />
				      <!--  -->RadioButton
				            android:text="@string/radio_group_reply_sms_string"
				            android:id="@+id/radio_group_reply_sms" 
				            android:textSize="15sp"
				            />		   	
	            <!--  -->/RadioGroup>  
	       		      
		        <!--  -->EditText android:id="@+id/add_bl_number_reply_sms_editor"
		            	  android:layout_width="fill_parent"
		                  android:layout_height="70dip" 
		                  android:maxLength="70"
		                  android:layout_marginLeft="50dip"
		                  android:layout_marginRight="30dip"
		                  />       
		       	
		   <!--  -->/LinearLayout>
		   
		   <TextView android:id="@+id/add_bl_number_block_from_view"
	        		  android:layout_width="wrap_content"
	            	  android:layout_height="wrap_content"
	                  android:textSize="14sp"
	                  android:textStyle="bold"
	                  android:layout_gravity="center_vertical" 
                      android:text="@string/add_bl_number_block_from_string"
                      />    	 	 
	       	 	 
	       		 	 
	       	<LinearLayout android:layout_width="fill_parent" 
	        	android:layout_height="wrap_content"
	       		android:orientation="vertical"
	       		android:paddingLeft="10dip"
	       		android:paddingRight="10dip"
	       		>
					  
				<CheckBox android:id="@+id/call_block_check_box"
                      android:text="@string/add_number_block_call"
				      android:layout_width="fill_parent"
				      android:layout_height="wrap_content"
				      android:textSize="15sp"
				      />
				      
				 <CheckBox android:id="@+id/sms_block_check_box"
                      android:text="@string/add_number_block_sms"
				      android:layout_width="fill_parent"
				      android:layout_height="wrap_content"
				      android:textSize="15sp"
				      />     	       	
	    	</LinearLayout>	 	 
	       
	   	</LinearLayout>
   	
   	</ScrollView>
	
	<LinearLayout android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
        		> 
        	<TextView android:layout_width="wrap_content"
	            	  android:layout_height="wrap_content"
	                  android:textSize="12sp"
	                  android:textColor="@color/nortoncolor"
	                  android:text="@string/press_menu_to_view_selected_numbers"
	                  android:layout_gravity="center_vertical|left"
	                  android:paddingLeft="5dip"
	                  android:paddingRight="5dip"
	                  android:layout_weight="1"
	                  />
        	
	        <Button android:id="@+id/add_number_view_done_btn"
                	android:text="@string/btn_done"
	        		android:layout_width="wrap_content"
	        		android:layout_height="40dip"
	        		android:layout_gravity="center_vertical"
	        		android:minWidth="90dip"

	        		/>
	        		
	       	<!--  -->Button android:id="@+id/add_number_view_cancel_btn"
                android:text="@string/btn_cancel"
	        		android:layout_width="fill_parent"
	        		android:layout_height="wrap_content"
	        		android:layout_weight="1"

	        		/>
	        		
	       
	        		    
	</LinearLayout>
		
</LinearLayout>
