<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    
    >

	<ScrollView android:orientation="vertical"
		   	android:layout_width="fill_parent"
		   	android:layout_height="fill_parent"
		   	android:layout_weight="1.0"
		   	android:padding="10dip"
		   	>
		<LinearLayout android:layout_width="fill_parent"
					  android:layout_height="wrap_content"
					  android:orientation="vertical"
					  >
	
		   	<TextView android:id="@+id/reply_editor_input_content_text"
		        		  android:layout_width="fill_parent"
		            	  android:layout_height="wrap_content"
		                  android:textSize="16sp"
		                  android:textStyle="bold"
		                  android:text="@string/reply_editor_input_content_string"
		                  android:paddingTop="5dip"
		                  />
		 
			<EditText android:id="@+id/reply_sms_editor"
		            	  android:layout_width="fill_parent"
		                  android:layout_height="150dip"
		                  android:layout_gravity="center_vertical" 
		                  android:maxLength="70"
						  />
		 	
		 	<TextView android:id="@+id/reply_editor_max_length_show_text"
		        		  android:layout_width="fill_parent"
		            	  android:layout_height="wrap_content"
		                  android:textSize="16sp"
		                  android:textStyle="bold"
		                  android:text="@string/reply_editor_max_length_show_string"
		                  android:paddingTop="5dip"
		                  />
	                  
	    </LinearLayout>
	    
	 </ScrollView>
         		 	 
    <LinearLayout android:layout_width="fill_parent"
		        android:layout_height="60dip"
		        android:orientation="horizontal"
		        android:gravity="center"
		        android:background="@color/lightgray"   
        		> 
        
        <Button android:id="@+id/reply_editor_ok_btn"
        		android:text="@string/btn_ok"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		/>
        		
        <Button android:id="@+id/reply_editor_cancel_btn"
        		android:text="@string/btn_cancel"
        		android:layout_height="wrap_content"
        		android:layout_width="wrap_content"
        		/>
	        		    
	</LinearLayout>
</LinearLayout>