<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    >
    
     <TextView  
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="@string/advance_call_log_phone_number"
        android:textSize="18sp"
        android:textStyle="bold"
        />
        
	<TextView android:id="@+id/adv_call_log_number_text"
	              android:layout_width="fill_parent" 
                  android:layout_height="wrap_content"
                  android:paddingLeft="20dip"
                  />
                  
    <TextView 
          android:layout_width="fill_parent"
          android:layout_height="30dip"
          />
    
    <TextView  
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
        android:text="@string/advance_call_log_scene"
    	android:textSize="18sp"
        android:textStyle="bold"
    	/>
    	
    <TextView  android:id="@+id/adv_call_log_scene_name_text"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:paddingLeft="20dip" 
    	/>
    
    
    <TextView 
	      android:layout_width="fill_parent"
	      android:layout_height="30dip"
	      />
	 
	 <TextView  
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
        android:text="@string/advance_call_log_reply_sms"
    	android:textSize="18sp"
        android:textStyle="bold"
    	/>
	      
	<TextView  android:id="@+id/adv_call_log_reply_sms_text"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:paddingLeft="20dip"
    	/>	
    
    <TextView 
	      android:layout_width="fill_parent"
	      android:layout_height="30dip"
	      />
	      
	<TextView  android:id="@+id/adv_call_log_date_text"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	/>
    
</LinearLayout>
